# roboboat

./: .gitignore  Dockerfile  pyproject.toml
app/: boat_controller.py  config.py  main.py  vechicle.py  video.py
app/controllers/: vehicle_controller.py
app/models/: schema.py
app/routers/: control.py  telemetry.py  video.py
app/services/: controller_service.py  telemetry_service.py
app/static/: index.html
missions/: mission.py
