[project]
name = "roboboat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.10",
    "aiortc>=1.9.0",
    "fastapi>=0.115.2",
    "loguru>=0.7.2",
    "numpy>=2.1.2",
    "opencv-python>=4.10.0.84",
    "pydantic-settings>=2.5.2",
    "pydantic>=2.9.2",
    "python-multipart>=0.0.12",
    "uvicorn>=0.31.1",
    "websockets>=13.1",
]
